src/components/layout/Footer/Footer.module.scss
@use "../../../styles/scss/mixins";

.footer {
  height: 96px;
  display: flex;
  align-items: center;
  border-top: 1px solid rgb(var(--shadow));

  .inner {
    display: flex;
    justify-content: space-between;

    @include mixins.lg {
      justify-content: center;
    }
  }

  p {
    font: var(--body-default-lg-md);
    color: rgb(var(--shadow));

    &:first-child {
      svg {
        margin-right: 8px;
      }
    }
  }

  .social {
    gap: 16px;
  }
}

